--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "loguru",
     "PySnooper",
     "requests",
+    "openai>=1.109.1",
 ]
 requires-python = ">=3.13"
 license = {text = "UNLICENCE"}
